[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.3"]

[project]
authors = [{ name = "Nabu Casa, Inc.", email = "opensource@nabucasa.com" }]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["aiohttp>=3.9.3", "cryptography>=2.5"]
description = "SNI proxy with TCP multiplexer"
keywords = ["sni", "proxy", "multiplexer", "tls"]
license = { text = "GPL v3" }
name = "snitun"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.optional-dependencies]
lint = ["ruff==0.14.10"]
test = [
  "covdefaults==2.3.0",
  "pytest-aiohttp==1.1.0",
  "pytest-codspeed==4.2.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest==9.0.1",
]

[project.urls]
Homepage = "https://www.nabucasa.com/"
Repository = "https://github.com/NabuCasa/snitun.git"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
fix = true
line-length = 88
show-fixes = true
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "A005",     # https://docs.astral.sh/ruff/rules/stdlib-module-shadowing/
  "ASYNC110", # https://docs.astral.sh/ruff/rules/async-busy-wait/
  "EM101",    # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
  "EM102",    # https://docs.astral.sh/ruff/rules/f-string-in-exception/
  "FBT",      # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
  "N818",     # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
  "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
  "PERF203",  # https://docs.astral.sh/ruff/rules/try-except-in-loop/
  "S101",     # https://docs.astral.sh/ruff/rules/assert/
  "S104",     # https://docs.astral.sh/ruff/rules/hardcoded-bind-all-interfaces/
  "TC001",    # https://docs.astral.sh/ruff/rules/typing-only-first-party-import/
  "TC003",    # https://docs.astral.sh/ruff/rules/typing-only-standard-library-import/
  "TC006",    # https://docs.astral.sh/ruff/rules/runtime-cast-value/
  "TID252",   # https://docs.astral.sh/ruff/rules/relative-imports/
  "TRY003",   # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
  "TRY301",   # https://docs.astral.sh/ruff/rules/raise-within-try/
  "TRY400",   # https://docs.astral.sh/ruff/rules/error-instead-of-exception/
]

select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"py.typed" = ["D100"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["snitun"]

[tool.ruff.lint.mccabe]
max-complexity = 22

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 30
max-returns = 8
max-statements = 80

[tool.setuptools]
include-package-data = true
platforms = ["any"]
zip-safe = false

[tool.setuptools.packages.find]
include = [
  "snitun",
  "snitun.metrics",
  "snitun.server",
  "snitun.client",
  "snitun.multiplexer",
  "snitun.utils",
]

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 75
exclude_also = [
    "if self._debug:",
]
